--- a/ODK.Website.Angular/src/css/main.scss
+++ b/ODK.Website.Angular/src/css/main.scss
@@ -2,6 +2,7 @@
 
 @import "_base";
 
+@import "_buttons";
 @import "_elements";
 @import "_forms";
 @import "_header";
@@ -10,3 +11,5 @@
 @import "_modal";
 @import "_navbar";
 @import "_sections";
+
+@import "_events";
