--- a/ODK.Website.Angular/src/app/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event/event.component.html
@@ -1,1 +1,13 @@
-<app-body *ngIf="event" [title]="event.name"></app-body>
+<app-body *ngIf="event" [title]="event.name">
+    <div class="row">
+        <div class="col-lg-9 col-md-8">
+            <h2>{{event.location}}</h2>
+            <h2>{{event.date | date:'fullDate'}}</h2>
+            <h3 *ngIf="event.time">{{event.time}}</h3>
+            <p *ngIf="event.description">{{event.description}}</p>
+        </div>
+        <div class="col-lg-3 col-md-4">
+            <app-event-sidebar [eventId]="eventId"></app-event-sidebar>
+        </div>
+    </div>    
+</app-body>
