event admin: show all responses

--- a/ODK.Website.Angular/src/app/components/events/event-sidebar/event-sidebar.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event-sidebar/event-sidebar.component.html
@@ -16,6 +16,6 @@
 
         <app-event-sidebar-attendees title="Going" [members]="going"></app-event-sidebar-attendees>
         <app-event-sidebar-attendees title="Maybe" [members]="maybe"></app-event-sidebar-attendees>
-        <app-event-sidebar-attendees title="Not going" [members]="notGoing"></app-event-sidebar-attendees>        
+        <app-event-sidebar-attendees title="Not going" [members]="declined"></app-event-sidebar-attendees>        
     </div>
 </ng-container>
