--- a/ODK.Website.Angular/projects/admin/src/app/components/events/events/events.component.html
+++ b/ODK.Website.Angular/projects/admin/src/app/components/events/events/events.component.html
@@ -9,7 +9,9 @@
                 <th>Name</th>
                 <th>Date</th>
                 <th>Location</th>
-                <th>Going</th>
+                <th>Y</th>
+                <th>?</th>
+                <th>X</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +20,8 @@
                 <td>{{viewModel.event.date | date:'dd MMM yyyy'}}</td>
                 <td>{{viewModel.event.location}}</td>
                 <td>{{viewModel.going}}</td>
+                <td>{{viewModel.maybe}}</td>
+                <td>{{viewModel.declined}}</td>
             </tr>
         </tbody>
     </table>
