--- a/ODK.Website.Angular/src/app/components/structure/navbar/navbar.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/navbar/navbar.component.html
@@ -4,14 +4,14 @@
             <button class="navbar-toggler" type="button" (click)="collapsed = !collapsed">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!--<div [ngbCollapse]="collapsed" class="collapse navbar-collapse flex-column">
+            <div [ngbCollapse]="collapsed" class="collapse navbar-collapse flex-column">
                 <ul class="navbar-nav">
                     <li *ngFor="let menuItem of menuItems" class="nav-item">
                         <a *ngIf="menuItem.link" class="nav-link" [routerLink]="menuItem.link" routerLinkActive="active" (click)="collapse()">{{menuItem.text}}</a>
                         <a *ngIf="menuItem.externalLink" class="nav-link" [attr.href]="menuItem.externalLink" target="_blank">{{menuItem.text}}</a>
                     </li>
                 </ul>
-            </div>-->
+            </div>
             <app-account-menu></app-account-menu>
         </div>
     </nav>
