--- a/ODK.Website.Angular/src/app/admin/components/events/event/event.component.html
+++ b/ODK.Website.Angular/src/app/admin/components/events/event/event.component.html
@@ -1,11 +1,23 @@
 <ng-container *ngIf="event">    
     <h2>{{event.name}}</h2>
-    <h3>{{event.date | date:'fullDate'}}</h3>
-    <h3>{{event.location}}</h3>    
+    <h5>{{event.date | date:'fullDate'}}</h5>
+    <h5>{{event.location}}</h5>
     
-    <p *ngIf="invites.sent === 0">
-        <button class="btn btn-primary" (click)="onSendInvites()">Send invites</button>
-    </p>
-
-    <app-edit-event [chapter]="chapter" [event]="event"></app-edit-event>
+    <ngb-tabset type="pills">
+        <ngb-tab title="Edit">
+            <ng-template ngbTabContent>
+                <app-edit-event [chapter]="chapter" [event]="event"></app-edit-event>
+            </ng-template>
+        </ngb-tab>        
+        <ngb-tab title="Invites">
+            <ng-template ngbTabContent>
+                <app-event-invites [eventId]="event.id"></app-event-invites>
+            </ng-template>
+        </ngb-tab>
+        <ngb-tab title="Responses">
+            <ng-template ngbTabContent>
+                <app-event-responses [eventId]="event.id"></app-event-responses>
+            </ng-template>
+        </ngb-tab>        
+    </ngb-tabset>        
 </ng-container>
