--- a/ODK.Website.Angular/src/app/admin/components/admin/admin.component.html
+++ b/ODK.Website.Angular/src/app/admin/components/admin/admin.component.html
@@ -1,4 +1,6 @@
-<div class="container">
-    <app-admin-menu></app-admin-menu>
-    <router-outlet></router-outlet>
-</div>
+<app-admin-menu></app-admin-menu>
+<section class="section section--main">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</section>
