--- a/ODK.Website.Angular/src/css/_header.scss
+++ b/ODK.Website.Angular/src/css/_header.scss
@@ -12,3 +12,12 @@
         margin-bottom: 0;
     }
 }
+
+.nav-container {
+    margin-bottom: 0.4rem;
+}
+
+.nav-account-menu {
+    position: absolute;
+    right: 0;
+}
