--- a/ODK.Website.Angular/src/app/components/structure/home-menu/home-menu.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/home-menu/home-menu.component.html
@@ -1,3 +1,3 @@
 <ng-container *ngIf="menuItems">
-    <app-navbar breakpoint="lg" [menuItems]="menuItems"></app-navbar>
+    <app-navbar breakpoint="lg" [menuItemGroups]="menuItems"></app-navbar>    
 </ng-container>
