--- a/ODK.Website.Angular/src/app/components/events/event-sidebar-attendees/event-sidebar-attendees.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event-sidebar-attendees/event-sidebar-attendees.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="members && members.length > 0" class="card">
+<div *ngIf="members && members.length > 0" class="card sidebar-card">
     <div class="card-header">{{title}}</div>
     <div class="card-body">        
         <div *ngFor="let member of members">{{member.fullName}}</div>
