--- a/ODK.Website.Angular/src/app/components/events/event-sidebar/event-sidebar.component.html
+++ b/ODK.Website.Angular/src/app/components/events/event-sidebar/event-sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <div class="card">
+    <div class="card sidebar-card">
         <div class="card-header">RSVP</div>
         <div class="card-body">                
             <div class="d-flex justify-content-around">
