--- a/ODK.Website.Angular/src/app/components/layouts/page-with-sidebar/page-with-sidebar.component.html
+++ b/ODK.Website.Angular/src/app/components/layouts/page-with-sidebar/page-with-sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="col-lg-9 col-md-8">
+    <div class="col-lg-9 col-md-8 order-2 order-md-1">
         <ng-content select="[app-main]"></ng-content>
     </div>
-    <div class="col-lg-3 col-md-4">
+    <div class="col-lg-3 col-md-4 order-1 order-md-2">
         <ng-content select="[app-sidebar]"></ng-content>
     </div>
 </div>    
