--- a/ODK.Website.Angular/src/app/components/members/member-image/member-image.component.html
+++ b/ODK.Website.Angular/src/app/components/members/member-image/member-image.component.html
@@ -1,1 +1,3 @@
-<img *ngIf="image" [style.max-width.px]="maxWidth" class="card-img-top" [attr.src]="image" [attr.alt]="'Photo of ' + member.fullName" />
+<ng-container *appLoading="loading">
+    <img *ngIf="image" [style.max-width.px]="maxWidth" class="card-img-top" [attr.src]="image" [attr.alt]="'Photo of ' + member.fullName" />
+</ng-container>
