--- a/ODK.Website.Angular/src/app/components/members/member/member.component.html
+++ b/ODK.Website.Angular/src/app/components/members/member/member.component.html
@@ -1,3 +1,10 @@
-<app-body *ngIf="member" [title]="member.fullName">
-    
+<app-body *appLoading="!member" [title]="member.fullName">
+    <div class="row">
+        <div class="col-md-7">
+            <app-member-profile [memberId]="memberId"></app-member-profile>
+        </div>
+        <div class="col-md-5">
+            <app-member-image [member]="member"></app-member-image>
+        </div>
+    </div>    
 </app-body>
