Add first go at image rotation

--- a/ODK.Website.Angular/src/app/admin/components/members/member/member.component.html
+++ b/ODK.Website.Angular/src/app/admin/components/members/member/member.component.html
@@ -1,1 +1,4 @@
-<p>member works!</p>
+<app-member-image [member]="member" [maxWidth]="250"></app-member-image>
+<button *ngIf="member" (click)="onRotate()">
+    Rotate
+</button>
