fix image rotate request response handling

--- a/ODK.Website.Angular/src/app/admin/components/members/member/member.component.html
+++ b/ODK.Website.Angular/src/app/admin/components/members/member/member.component.html
@@ -1,4 +1,4 @@
-<app-member-image [member]="member" [maxWidth]="250"></app-member-image>
+<app-member-image [member]="member" [maxWidth]="250" [update]="updateImage"></app-member-image>
 <button *ngIf="member" (click)="onRotate()">
     Rotate
 </button>
