--- a/ODK.Website.Angular/src/app/components/account/login/login.component.html
+++ b/ODK.Website.Angular/src/app/components/account/login/login.component.html
@@ -1,3 +1,7 @@
 <app-body title="Login">
-    <app-form [form]="form" (formSubmit)="onFormSubmit()"></app-form>
+    <app-form [form]="form" (formSubmit)="onFormSubmit()">
+        <div app-button-row class="ml-auto">
+            <a [routerLink]="links.forgottenPassword">Forgotten password?</a>
+        </div>
+    </app-form>
 </app-body>
