--- a/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
@@ -1,2 +1,4 @@
-<app-form [form]="form" justifyButton="end" (formSubmit)="onFormSubmit()">     
-</app-form>
+<app-body title="Change password" [breadcrumbs]="breadcrumbs">
+    <app-form [form]="form" justifyButton="end" (formSubmit)="onFormSubmit()">     
+    </app-form>
+</app-body>
