--- a/ODK.Website.Angular/src/app/components/account/subscription/subscription.component.html
+++ b/ODK.Website.Angular/src/app/components/account/subscription/subscription.component.html
@@ -1,4 +1,4 @@
-<app-body title="My Subscription">
+<app-body title="My Subscription" [breadcrumbs]="breadcrumbs">    
     <app-form *ngIf="form" [form]="form"></app-form>
     <ng-container *ngIf="chapterSubscriptions">
         <h2>Renew membership</h2>
