Change password form button position

--- a/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/change-password/change-password.component.html
@@ -1,4 +1,4 @@
 <app-body title="Change password" [breadcrumbs]="breadcrumbs">
-    <app-form [form]="form" justifyButton="end" (formSubmit)="onFormSubmit()">     
+    <app-form [form]="form" (formSubmit)="onFormSubmit()">     
     </app-form>
 </app-body>
