Define static titles on routes, set dynamic titles in components

--- a/ODK.Website.Angular/src/app/components/account/forgotten-password/forgotten-password.component.html
+++ b/ODK.Website.Angular/src/app/components/account/forgotten-password/forgotten-password.component.html
@@ -1,4 +1,4 @@
-<app-body title="Reset password">
+<app-body>
   <ng-container *ngIf="!message">
     <p>
       Enter your registered email address below to receive a link that will enable you to reset your password. The link will remain active for 30 minutes.
