--- a/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
+++ b/ODK.Website.Angular/src/app/components/account/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-body title="My Profile">
+<app-body>
     <div class="row">
         <div class="col-6">
             <div *ngIf="links">
@@ -15,6 +15,6 @@
             </div>
         </div>
     </div>
-    
+
     <app-profile-form></app-profile-form>
 </app-body>
