--- a/ODK.Website.Angular/src/app/components/privacy/privacy.component.html
+++ b/ODK.Website.Angular/src/app/components/privacy/privacy.component.html
@@ -1,15 +1,15 @@
-<app-body title="Privacy">
-    <div class="container">        
+<app-body>
+    <div class="container">
         <div><em>Last Updated: 31 October 2018<br></em></div>
         <p>
-            This Privacy Policy governs the collection, storage and use of personal data collected by us, the Drunken Knitwits, 
-            when you use our site and register as a member using our website at drunkenknitwits.com (the "<strong>Website</strong>"). 
-            It provides you with details about the personal data we collect from you, how we use that personal data and your rights to control our use of personal data. 
-            Please read this Privacy Policy carefully. 
-            By visiting this Website (the "<strong>Services</strong>"), you confirm that you have read, understood and agree to this Privacy Policy in its entirety. 
+            This Privacy Policy governs the collection, storage and use of personal data collected by us, the Drunken Knitwits,
+            when you use our site and register as a member using our website at drunkenknitwits.com (the "<strong>Website</strong>").
+            It provides you with details about the personal data we collect from you, how we use that personal data and your rights to control our use of personal data.
+            Please read this Privacy Policy carefully.
+            By visiting this Website (the "<strong>Services</strong>"), you confirm that you have read, understood and agree to this Privacy Policy in its entirety.
             If you do not agree to this Privacy Policy in its entirety, you must not use the Services.
         </p>
-        
+
         <h2>1. The personal data we collect</h2>
         <p>When you use and browse the Services we collect the following information:</p>
         <ul>
@@ -20,7 +20,7 @@
         <p>
             When you join the Website, the profile information you enter and photo you upload will become viewable only to other logged in members who are using the Services.
         </p>
-        
+
         <h2>2. How we may store and use information</h2>
         <p>We may collect, store and use personal data listed above relating to you for the following purposes:</p>
         <ul>
@@ -28,24 +28,24 @@
             <li>To maintain and support any customer account that you have with us;</li>
         </ul>
         <p><strong>We will not disclose, sell or rent personal data about you to any third party. </strong></p>
-        
+
         <h2 id="cookies">3. Cookies</h2>
         <p>
-            This Website uses cookies to collect information about you. Cookies are small data files which are placed on your computer by this 
-            Website and which collect certain personal data about you. 
-            This enables us to tailor our service offering (including the Website) to provide you with a better service. 
-            However, you may change your website browser settings to reject cookies, although please note that if you or they do this it may 
-            impair the functionality of the Services. 
+            This Website uses cookies to collect information about you. Cookies are small data files which are placed on your computer by this
+            Website and which collect certain personal data about you.
+            This enables us to tailor our service offering (including the Website) to provide you with a better service.
+            However, you may change your website browser settings to reject cookies, although please note that if you or they do this it may
+            impair the functionality of the Services.
             As each website browser is different, please visit your browser's "Help" menu to learn how to change your cookie preferences.
         </p>
-        
+
         <h2>4. Security</h2>
         <p>
-            Whilst we take appropriate technical and organizational measures to safeguard the personal data that you provide to us, 
-            no transmission over the Internet can ever be guaranteed secure. 
+            Whilst we take appropriate technical and organizational measures to safeguard the personal data that you provide to us,
+            no transmission over the Internet can ever be guaranteed secure.
             Consequently, please note that we cannot guarantee the security of any personal data that you or they transfer over the Internet to us.
         </p>
-        
+
         <h2>5. Your rights</h2>
         <p>You have the following rights:</p>
         <ul>
