--- a/ODK.Website.Angular/src/app/components/account/login/login.component.html
+++ b/ODK.Website.Angular/src/app/components/account/login/login.component.html
@@ -1,4 +1,4 @@
-<app-body title="Login">
+<app-body>
     <app-form [form]="form" (formSubmit)="onFormSubmit()">
         <div app-button-row class="ml-auto">
             <a [routerLink]="links.forgottenPassword">Forgotten password?</a>
