--- a/ODK.Website.Angular/src/app/components/account/subscription/subscription.component.html
+++ b/ODK.Website.Angular/src/app/components/account/subscription/subscription.component.html
@@ -1,10 +1,10 @@
-<app-body title="My Subscription" [breadcrumbs]="breadcrumbs">    
+<app-body [breadcrumbs]="breadcrumbs">
     <app-form *ngIf="form" [form]="form"></app-form>
     <ng-container *ngIf="chapterSubscriptions">
         <h2>Renew membership</h2>
         <div class="mb-3" *ngFor="let chapterSubscription of chapterSubscriptions">
-            <app-purchase-subscription [chapterSubscription]="chapterSubscription">            
+            <app-purchase-subscription [chapterSubscription]="chapterSubscription">
             </app-purchase-subscription>
-        </div>        
+        </div>
     </ng-container>
 </app-body>
