--- a/ODK.Website.Angular/src/app/components/members/members/members.component.html
+++ b/ODK.Website.Angular/src/app/components/members/members/members.component.html
@@ -1,3 +1,3 @@
-<app-body *ngIf="chapter" [title]="chapter.name + ' Knitwits'">
+<app-body *ngIf="chapter">
     <app-member-list [members]="members" [cols]="3"></app-member-list>
 </app-body>
