Get event updates working

--- a/ODK.Website.Angular/src/app/admin/components/events/edit-event/edit-event.component.html
+++ b/ODK.Website.Angular/src/app/admin/components/events/edit-event/edit-event.component.html
@@ -1,3 +1,3 @@
 <app-event-form *ngIf="event" buttonText="Update" [chapter]="chapter" [event]="event" [formCallback]="formCallback"
-    (submit)="onFormSubmit($event)">    
+    (formSubmit)="onFormSubmit($event)">
 </app-event-form>
