--- a/ODK.Website.Angular/src/app/admin/components/events/create-event/create-event.component.html
+++ b/ODK.Website.Angular/src/app/admin/components/events/create-event/create-event.component.html
@@ -1,3 +1,3 @@
 <app-event-form *ngIf="chapter" buttonText="Create" [chapter]="chapter" [formCallback]="formCallback"
-    (submit)="onFormSubmit($event)">    
+    (formSubmit)="onFormSubmit($event)">
 </app-event-form>
