Dynamic form branch

--- a/ODK.Website.Angular/src/app/modules/admin/components/events/event-form/event-form.component.html
+++ b/ODK.Website.Angular/src/app/modules/admin/components/events/event-form/event-form.component.html
@@ -1,1 +1,3 @@
 <app-form *ngIf="form" [form]="form" (formSubmit)="onFormSubmit()"></app-form>
+
+<app-dynamic-form *ngIf="dynamicForm" [form]="dynamicForm"></app-dynamic-form>
