--- a/ODK.Website.Angular/src/app/components/payments/payment-button/payment-button.component.html
+++ b/ODK.Website.Angular/src/app/components/payments/payment-button/payment-button.component.html
@@ -7,5 +7,6 @@
     [currencyCode]="country.currencyCode"
     [currencySymbol]="country.currencySymbol"
     [name]="payment.name"
+    (cardSubmit)="onCardSubmit($event)"
     (close)="onFormClose()">
 </app-stripe-form>
