Expiring subscription alert

--- a/ODK.Website.Angular/src/app/components/structure/body/body.component.html
+++ b/ODK.Website.Angular/src/app/components/structure/body/body.component.html
@@ -1,6 +1,7 @@
 <main>
     <app-page-title *ngIf="title" [title]="title"></app-page-title>
-    <app-notifications></app-notifications>
+    <app-subscription-alert></app-subscription-alert>
+    <app-notifications></app-notifications>    
     <section class="section section--main">
         <div class="container">
             <ng-container *ngIf="breadcrumbs">
